@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 16, 2008</p>
+      <p>Last Updated: August 17, 2008</p>
     </td>
   </tr>
 </table>
@@ -1040,6 +1040,12 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  int and unsigned int.
 	* Add support for redirection of command output in NSH
 	* NSH can now use both telnet and serial front ends together
+	* $variable can be used for any command value in NSH.
+	* Fixed an error in opendir() that could cause an assertion to fail
+	  inappropriately.
+	* Correct an error in the FAT that caused files opened for writing with
+	  O_APPEND to fail.  The file was not being properly positioned to the
+	  end of the file in that case.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
